--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>
         NUSA365 - Slot Online Gacor Bandar Terbesar di Indonesia
     </title>
+    <meta name="google-site-verification" content="i9P6R8-gftkDpnhgf2-5PlZT78EBj49Ix8sPXk_JRHI" />
 
 
     <meta name="description"
